--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@
 *.360 filter=lfs diff=lfs merge=lfs -text
 *.JPG filter=lfs diff=lfs merge=lfs -text
 *.webm filter=lfs diff=lfs merge=lfs -text
+*.cfa filter=lfs diff=lfs merge=lfs -text
+*.pek filter=lfs diff=lfs merge=lfs -text
+*.mp3 filter=lfs diff=lfs merge=lfs -text
